maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:23: error: ';' expected but 'if' found.
    } if (!aMurOuest(posXNote, posYNote)) {
      ^